languages/CNNArchLang/src/test/resources/valid_tests/SimpleLoadNetwork.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture SimpleLoadNetwork(inputs=10, classes=2){
    def input Q(-oo:+oo)^{inputs} in1
    def output Q(-oo:oo)^{classes} out1

    in1 ->
    LoadNetwork(networkDir="dir", networkPrefix="-",numInputs=1,outputShape=64) ->
    Tanh() ->
    FullyConnected(units=classes, no_bias=true) ->
    out1;
}