languages/CNNArchLang/src/test/resources/invalid_tests/MissingMerge.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture MissingMerge(inputs=10, classes=2){
    def input Q(-oo:+oo)^{inputs} in1
    def output Q(0:1)^{classes} out1

    in1 ->
    (
        (
            FullyConnected(units=16)
        |
            FullyConnected(units=16)
        )
    |
        (
            FullyConnected(units=16)
        |
            FullyConnected(units=16)
        )
    ) ->
    Add() ->
    Tanh() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out1;
}
